Fixed pending reviews text overflow

--- a/client/src/components/Account/PendingReviews.css
+++ b/client/src/components/Account/PendingReviews.css
@@ -38,6 +38,9 @@
 .buyer-pending-review div {
   display: flex;
   align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .buyer-pending-review div img {
@@ -46,17 +49,7 @@
 
 #buyer-review-product-details {
   display: block;
-  /* flex-direction: column;
-  align-items: flex-start; */
 }
-
-/* #buyer-review-product-details div {
-  min-width: 400px;
-  /* background-color: red; */
-
-/* #buyer-review-product-details h6 {
-  width: 100%;
-} */
 
 #buyer-review-product-details h6 {
   width: 100%;
@@ -71,20 +64,14 @@
   text-decoration: none;
 }
 
+.pending-review-rate-link {
+  padding: 3px;
+}
+
 .pending-review-rate-link:hover {
-  padding: 3px 5px;
   background-color: rgba(255, 192, 203, 0.5);
   border-radius: 5px;
 }
-
-/* @media screen and (max-width: 1140px) {
-  #buyer-review-product-details h6 {
-
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-} */
 
 @media screen and (max-width: 960px) {
   .pending-reviews-wrapper {
@@ -97,23 +84,5 @@
     justify-content: center;
     border-top: 1px solid #d4d4d4;
     padding: 5px 0px;
-  }
-}
-
-@media screen and (max-width: 770px) {
-  #buyer-review-product-details h6 {
-    width: 300px;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  #buyer-review-product-details h6 {
-    width: 200px;
-  }
-}
-
-@media screen and (max-width: 359px) {
-  #buyer-review-product-details h6 {
-    width: 130px;
   }
 }
